# titan

./: .gitignore  .mergify.yml  .rustfmt.toml  README.md  cargo.toml
.github/: CODEOWNERS
.github/workflows/: pr-lint.yml
libs/titanc/: Cargo.toml
libs/titanc/src/: main.rs
libs/titanc/src/compiler/: ast.rs  debug.rs  parser.rs  symbol_table.rs  type_checker.rs
libs/titanc/src/interpreter/: environment.rs  interpret.rs
libs/tree-sitter-titan/: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  test.titan
libs/tree-sitter-titan/bindings/node/: binding.cc  index.js
libs/tree-sitter-titan/bindings/rust/: build.rs  lib.rs
web-client/: package.json  pnpm-lock.yaml
web-client/src/: App.tsx
